[gd_scene load_steps=33 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Fonts/jomhuria.font" type="BitmapFont" id=2]
[ext_resource path="res://GUI/restart.png" type="Texture" id=3]
[ext_resource path="res://GUI/back.png" type="Texture" id=4]
[ext_resource path="res://Musics/362106__aptbr__piano-improvisation.ogg" type="AudioStream" id=5]
[ext_resource path="res://Sounds/spiccato/374406__samulis__viola-section-spiccato-c3-violas-spic-c2-v2-rr1.ogg" type="AudioStream" id=6]
[ext_resource path="res://Sounds/spiccato/374407__samulis__viola-section-spiccato-c5-violas-spic-c4-v2-rr1.ogg" type="AudioStream" id=7]
[ext_resource path="res://Sounds/spiccato/374434__samulis__viola-section-spiccato-e3-violas-spic-e2-v2-rr2.ogg" type="AudioStream" id=8]
[ext_resource path="res://Sounds/spiccato/374435__samulis__viola-section-spiccato-e5-violas-spic-e4-v2-rr2.ogg" type="AudioStream" id=9]
[ext_resource path="res://Sounds/spiccato/374437__samulis__viola-section-spiccato-f-3-violas-spic-g2-v2-rr2.ogg" type="AudioStream" id=10]
[ext_resource path="res://Sounds/spiccato/374438__samulis__viola-section-spiccato-f-5-violas-spic-g4-v2-rr2.ogg" type="AudioStream" id=11]
[ext_resource path="res://Sounds/spiccato/374428__samulis__viola-section-spiccato-b3-violas-spic-b2-v2-rr2.ogg" type="AudioStream" id=12]
[ext_resource path="res://Sounds/spiccato/374405__samulis__viola-section-spiccato-b5-violas-spic-b4-v2-rr1.ogg" type="AudioStream" id=13]
[ext_resource path="res://Sounds/pizzicato/374383__samulis__viola-section-pizzicato-c3-violaens-pizz-c2-v2-rr2.ogg" type="AudioStream" id=14]
[ext_resource path="res://Sounds/pizzicato/374384__samulis__viola-section-pizzicato-c5-violaens-pizz-c4-v2-rr2.ogg" type="AudioStream" id=15]
[ext_resource path="res://Sounds/tremolo/374484__samulis__viola-section-tremolo-e3-violas-trem-e2-v2-rr1.ogg" type="AudioStream" id=16]
[ext_resource path="res://Sounds/tremolo/374487__samulis__viola-section-tremolo-f-3-violas-trem-g2-v2-rr1.ogg" type="AudioStream" id=17]
[ext_resource path="res://Sounds/timpani/373946__samulis__timpani-rolls-e3-timpani4-roll-v5-rr1-sum.ogg" type="AudioStream" id=18]
[ext_resource path="res://Sounds/chimes/192634__samulis__chimes-c3-pp-1.ogg" type="AudioStream" id=19]
[ext_resource path="res://Sounds/chimes/192633__samulis__chimes-c4-p-1.ogg" type="AudioStream" id=20]
[ext_resource path="res://Sounds/crashes/209874__veiler__pff-chrash-14.ogg" type="AudioStream" id=21]
[ext_resource path="res://Sounds/136893__bowmans-last-words__coming-down.ogg" type="AudioStream" id=22]
[ext_resource path="res://Sounds/389724__uminari__rolling-rocks-06.ogg" type="AudioStream" id=23]
[ext_resource path="res://Sounds/tabla/130404__mmiron__ghe-3.ogg" type="AudioStream" id=24]
[ext_resource path="res://Sounds/tabla/130416__mmiron__tun.ogg" type="AudioStream" id=25]
[ext_resource path="res://Sounds/tabla/130419__mmiron__tun-2.ogg" type="AudioStream" id=26]
[ext_resource path="res://Sounds/tabla/130430__mmiron__tas-3.ogg" type="AudioStream" id=27]
[ext_resource path="res://Sounds/tabla/130428__mmiron__na-sharp.ogg" type="AudioStream" id=28]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 20000, 10 )

[sub_resource type="StyleBoxFlat" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = 60.0
content_margin_bottom = -1.0
bg_color = Color( 0.270588, 0.352941, 0.392157, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = true
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="StyleBoxFlat" id=4]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.835294, 0, 0.976471, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = true
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[node name="Main" type="Node2D"]

script = ExtResource( 1 )

[node name="BG" type="Polygon2D" parent="." index="0"]

show_behind_parent = true
position = Vector2( 0, -1100 )
z_index = -1
z_as_relative = false
polygon = PoolVector2Array( 630, -1720, -30, -1720, -30, 2140, 640, 2140 )
uv = PoolVector2Array(  )
color = Color( 0, 0, 0, 1 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = false
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0

[node name="Change" type="Tween" parent="BG" index="0"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="MainCamera" type="Camera2D" parent="." index="1"]

z_index = -2
offset = Vector2( 300, -300 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="Infinity" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 150.0
margin_right = 950.0
margin_bottom = 267.0
rect_scale = Vector2( 0.6, 0.6 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Here is the end of infinity"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Parts" type="Node2D" parent="." index="3"]

[node name="Inks" type="Node2D" parent="." index="4"]

[node name="Rectangles" type="Node2D" parent="." index="5"]

[node name="Dividers" type="Node2D" parent="." index="6"]

[node name="PrePart" type="Area2D" parent="." index="7"]

visible = false
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="Look" type="Polygon2D" parent="PrePart" index="0"]

polygon = PoolVector2Array( 10, -10, -10, -10, -10, 10, 10, 10 )
uv = PoolVector2Array(  )
color = Color( 0, 0, 0, 1 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = false
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PrePart" index="1"]

shape = SubResource( 1 )

[node name="Ground" type="StaticBody2D" parent="." index="8"]

position = Vector2( 0, -910 )
input_pickable = false
collision_layer = 0
collision_mask = 1025
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground" index="0"]

position = Vector2( 0, 880 )
shape = SubResource( 2 )

[node name="Look" type="Polygon2D" parent="Ground" index="1"]

position = Vector2( 0, -80 )
polygon = PoolVector2Array( -1810, 950, 1890, 950, 1890, 20000, -1810, 20000 )
uv = PoolVector2Array(  )
color = Color( 0, 0, 0, 1 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = false
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0

[node name="T500" type="Timer" parent="." index="9"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = true

[node name="T30000" type="Timer" parent="." index="10"]

process_mode = 1
wait_time = 30.0
one_shot = true
autostart = false

[node name="Canvas" type="CanvasLayer" parent="." index="11"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="V_ScrollBar" type="VScrollBar" parent="Canvas" index="0"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -29.0
margin_top = 70.0
margin_right = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 1
custom_styles/grabber = SubResource( 3 )
min_value = -2000.0
max_value = -300.0
step = 0.0
page = 0.0
value = -300.0
exp_edit = false
rounded = false
custom_step = -1.0

[node name="BG_top" type="Polygon2D" parent="Canvas" index="1"]

polygon = PoolVector2Array( 0, 0, 0, 70, 600, 70, 600, 0 )
uv = PoolVector2Array(  )
color = Color( 0.258824, 0.258824, 0.258824, 1 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = false
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0

[node name="look_Ink" type="ProgressBar" parent="Canvas" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 450.0
margin_bottom = 69.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_styles/fg = SubResource( 4 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
min_value = 0.0
max_value = 1000.0
step = 1.0
page = 0.0
value = 100.0
exp_edit = false
rounded = false
percent_visible = false

[node name="look_Record" type="Label" parent="Canvas" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 320.0
margin_top = 70.0
margin_right = 558.0
margin_bottom = 159.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_constants/shadow_as_outline = 1
text = "12345m"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Change" type="Tween" parent="Canvas/look_Record" index="0"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="look_Height" type="Label" parent="Canvas" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 390.0
margin_top = 140.0
margin_right = 628.0
margin_bottom = 229.0
rect_scale = Vector2( 0.7, 0.7 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_constants/shadow_as_outline = 1
text = "12345m"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="FPS" type="Label" parent="Canvas" index="5"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 380.0
margin_top = 10.0
margin_right = 490.0
margin_bottom = 99.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.458824, 0.458824, 0.458824, 1 )
text = "123"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Restart" type="Button" parent="Canvas" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 450.0
margin_right = 610.0
margin_bottom = 140.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 3 )
flat = false
align = 1

[node name="Back" type="Button" parent="Canvas" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 530.0
margin_right = 670.0
margin_bottom = 140.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 4 )
flat = false
align = 1

[node name="BG_music" type="AudioStreamPlayer" parent="." index="12"]

stream = ExtResource( 5 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="C3_spiccato" type="AudioStreamPlayer" parent="." index="13"]

stream = ExtResource( 6 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="C5_spiccato" type="AudioStreamPlayer" parent="." index="14"]

stream = ExtResource( 7 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="E3_spiccato" type="AudioStreamPlayer" parent="." index="15"]

stream = ExtResource( 8 )
volume_db = 8.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="E5_spiccato" type="AudioStreamPlayer" parent="." index="16"]

stream = ExtResource( 9 )
volume_db = 3.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="G3_spiccato" type="AudioStreamPlayer" parent="." index="17"]

stream = ExtResource( 10 )
volume_db = 8.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="G5_spiccato" type="AudioStreamPlayer" parent="." index="18"]

stream = ExtResource( 11 )
volume_db = 3.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="B3_spiccato" type="AudioStreamPlayer" parent="." index="19"]

stream = ExtResource( 12 )
volume_db = 8.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="B5_spiccato" type="AudioStreamPlayer" parent="." index="20"]

stream = ExtResource( 13 )
volume_db = 6.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="C3_pizzicato" type="AudioStreamPlayer" parent="." index="21"]

stream = ExtResource( 14 )
volume_db = 3.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="C5_pizzicato" type="AudioStreamPlayer" parent="." index="22"]

stream = ExtResource( 15 )
volume_db = 1.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="E3_tremolo" type="AudioStreamPlayer" parent="." index="23"]

stream = ExtResource( 16 )
volume_db = -3.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="G3_tremolo" type="AudioStreamPlayer" parent="." index="24"]

stream = ExtResource( 17 )
volume_db = -3.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="E3_timpani" type="AudioStreamPlayer" parent="." index="25"]

stream = ExtResource( 18 )
volume_db = 10.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="C3_chimes" type="AudioStreamPlayer" parent="." index="26"]

stream = ExtResource( 19 )
volume_db = 24.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="C4_chimes" type="AudioStreamPlayer" parent="." index="27"]

stream = ExtResource( 20 )
volume_db = 20.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Crash_14" type="AudioStreamPlayer" parent="." index="28"]

stream = ExtResource( 21 )
volume_db = 5.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Growth_sound" type="AudioStreamPlayer" parent="." index="29"]

stream = ExtResource( 22 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Divider_sound" type="AudioStreamPlayer" parent="." index="30"]

stream = ExtResource( 23 )
volume_db = 8.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Ink5_sound" type="AudioStreamPlayer" parent="." index="31"]

stream = ExtResource( 24 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Ink4_sound" type="AudioStreamPlayer" parent="." index="32"]

stream = ExtResource( 25 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Ink3_sound" type="AudioStreamPlayer" parent="." index="33"]

stream = ExtResource( 26 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Ink2_sound" type="AudioStreamPlayer" parent="." index="34"]

stream = ExtResource( 27 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Ink1_sound" type="AudioStreamPlayer" parent="." index="35"]

stream = ExtResource( 28 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="tween_completed" from="BG/Change" to="." method="_on_BG_Change_tween_completed"]

[connection signal="body_entered" from="PrePart" to="." method="_on_PrePart_body_entered"]

[connection signal="body_exited" from="PrePart" to="." method="_on_PrePart_body_exited"]

[connection signal="timeout" from="T500" to="." method="_on_T500_timeout"]

[connection signal="timeout" from="T30000" to="." method="_on_T30000_timeout"]

[connection signal="value_changed" from="Canvas/V_ScrollBar" to="." method="_on_V_ScrollBar_value_changed"]

[connection signal="tween_step" from="Canvas/look_Record/Change" to="." method="_on_look_Record_Change_tween_step"]

[connection signal="pressed" from="Canvas/Restart" to="." method="_on_Restart_pressed"]

[connection signal="pressed" from="Canvas/Back" to="." method="_on_Back_pressed"]


